Created departments template, updated CSS
Minor updates to home template

--- a/home.htm
+++ b/home.htm
@@ -15,7 +15,7 @@
 <body>
 
 <!-- Header -->
-<div id="header">
+<section id="header">
 	<img src="http://placehold.it/400x200" class="banner">
 		
 	<div id="nav">	
@@ -64,11 +64,11 @@
 			<span><i>Limited Time Only!</i></span>
 		</div>
 	</div>
-</div>
+</section>
 
 <!-- Content -->
 <div id="content">
-	<div class="content-wrapper-1">
+	<section class="content-wrapper-1">
 		<div class="container">
 			<h1><span>New Arrivals</span></h1><br>
 			
@@ -139,8 +139,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="content-wrapper-2">
+	</section>
+	<section class="content-wrapper-2">
 		<div class="container">
 			<h1><span>Most Popular</span></h1><br>
 			
@@ -209,8 +209,8 @@
 			</div>
 
 		</div>
-	</div>
-	<div class="content-wrapper-1">
+	</section>
+	<section class="content-wrapper-1">
 		<div class="container text-justify">
 			<h1><span>On Sale</span></h1><br>
 			
@@ -288,7 +288,7 @@
 
 		</div>
 	</div>
-</div>
+</section>
 
 <div class="container-fluid text-center" id="mailing-list">
 		<h2>Join the mailing list: <input type="text" placeholder="email@address.com"> <input type="submit" value="Join"></h2>
