added product template

--- a/home.htm
+++ b/home.htm
@@ -21,7 +21,7 @@
 	<div id="nav">	
 		<nav>
 			<ul>
-				<li><input type="text"><a href="#" id="search"><i class="fa fa-search fw" aria-hidden="true"></i></a></li>
+				<li><input type="text"><a href="#" class="search-icon"><i class="fa fa-search fw" aria-hidden="true"></i></a></li>
 				<li>
 					<a href="#">Shop</a>
 					<ul class="menu">
@@ -290,8 +290,9 @@
 	</div>
 </section>
 
+<!-- Mailing list -->
 <div class="container-fluid text-center" id="mailing-list">
-		<h2>Join the mailing list: <input type="text" placeholder="email@address.com"> <input type="submit" value="Join"></h2>
+		<h2>Want deals? <strong>Join the mailing list!</strong> <input type="text" placeholder="email@address.com"> <input type="submit" value="Join"></h2>
 </div>
 
 <!-- Footer -->
@@ -336,10 +337,8 @@
                 </ul>
             </div>
 		</div>
-
-        <p class="copyright text-right">© 2016</p>
     </div>
 </footer>
-
-</body>
-</html>
+<section id="copyright" class="container">
+	<p class="copyright text-right">© 2016 Website Name</p>
+</section>
