--- a/departments.htm
+++ b/departments.htm
@@ -23,7 +23,7 @@
 	<div id="nav">	
 		<nav>
 			<ul>
-				<li id="search-bar"><input type="text"><a href="#" id="search"><i class="fa fa-search fw" aria-hidden="true"></i></a></li>
+				<li id="search-bar"><input type="text"><a href="#" class="search-icon"><i class="fa fa-search fw" aria-hidden="true"></i></a></li>
 				<li>
 					<a href="#">Shop</a>
 					<ul class="menu">
@@ -91,11 +91,11 @@
 					  </div>
 					  <div id="collapse1" class="panel-collapse collapse in">
 						<div class="panel-body">
-							<ul>
-								<li>Shirts</li>
-								<li>T-Shirts</li>
-								<li>Jeans</li>
-								<li>Shorts</li>
+							<ul class="fa-ul">
+								<li><i class="fa-li fa fa-angle-right"></i>Shirts</li>
+								<li><i class="fa-li fa fa-angle-right"></i>T-Shirts</li>
+								<li><i class="fa-li fa fa-angle-right"></i>Jeans</li>
+								<li><i class="fa-li fa fa-angle-right"></i>Shorts</li>
 							</ul>
 						</div>
 					  </div>
@@ -108,11 +108,11 @@
 					  </div>
 					  <div id="collapse2" class="panel-collapse collapse">
 						<div class="panel-body">
-							<ul>
-								<li>Shirts</li>
-								<li>T-Shirts</li>
-								<li>Jeans</li>
-								<li>Shorts</li>
+							<ul class="fa-ul">
+								<li><i class="fa-li fa fa-angle-right"></i>Shirts</li>
+								<li><i class="fa-li fa fa-angle-right"></i>T-Shirts</li>
+								<li><i class="fa-li fa fa-angle-right"></i>Jeans</li>
+								<li><i class="fa-li fa fa-angle-right"></i>Shorts</li>
 							</ul>
 						</div>
 					  </div>
@@ -125,11 +125,11 @@
 					  </div>
 					  <div id="collapse3" class="panel-collapse collapse">
 						<div class="panel-body">
-							<ul>
-								<li>Shirts</li>
-								<li>T-Shirts</li>
-								<li>Jeans</li>
-								<li>Shorts</li>
+							<ul class="fa-ul">
+								<li><i class="fa-li fa fa-angle-right"></i>Shirts</li>
+								<li><i class="fa-li fa fa-angle-right"></i>T-Shirts</li>
+								<li><i class="fa-li fa fa-angle-right"></i>Jeans</li>
+								<li><i class="fa-li fa fa-angle-right"></i>Shorts</li>
 							</ul>
 						</div>
 					  </div>
@@ -142,11 +142,11 @@
 					  </div>
 					  <div id="collapse4" class="panel-collapse collapse">
 						<div class="panel-body">
-							<ul>
-								<li>Shirts</li>
-								<li>T-Shirts</li>
-								<li>Jeans</li>
-								<li>Shorts</li>
+							<ul class="fa-ul">
+								<li><i class="fa-li fa fa-angle-right"></i>Shirts</li>
+								<li><i class="fa-li fa fa-angle-right"></i>T-Shirts</li>
+								<li><i class="fa-li fa fa-angle-right"></i>Jeans</li>
+								<li><i class="fa-li fa fa-angle-right"></i>Shorts</li>
 							</ul>
 						</div>
 					  </div>
@@ -293,6 +293,7 @@
 	</section>
 </div>
 
+<!-- Mailing list -->
 <div class="container-fluid text-center" id="mailing-list">
 		<h2>Join the mailing list: <input type="text" placeholder="email@address.com"> <input type="submit" value="Join"></h2>
 </div>
@@ -339,10 +340,11 @@
                 </ul>
             </div>
 		</div>
-
-        <p class="copyright text-right">© 2016</p>
     </div>
 </footer>
+<section id="copyright" class="container">
+	<p class="copyright text-right">© 2016 Website Name</p>
+</section>
 
 </body>
 </html>
